# marius

./: .buildinfo  .clang-format  .flake8  .gitignore  .gitmodules  CMakeLists.old  CMakeLists.txt  CONTRIBUTING.md  DOCS.md  MANIFEST.in  README.md  build.html  faq.html  genindex.html  index.html  introduction.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.doctrees/: environment.pickle  faq.doctree  index.doctree  introduction.doctree  quickstart.doctree
.doctrees/config_interface/: configuration.doctree  (+3 more)
_sources/: build.rst.txt  faq.rst.txt  index.rst.txt  introduction.rst.txt  quickstart.rst.txt
_static/: documentation_options.js
armada_experiment_manager/: dockerfile
config_interface/: configuration.html  full_schema.html  index.html  samples.html
developer_guide/: common_tasks.html  documentation.html  index.html  testing.html
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  README.md  api.rst  build.rst  conf.py  configuration.rst  end_to_end_example.rst  evaluation.rst  examples.rst  getting_started.rst  index.rst  install_Marius.rst  installation.rst  introduction.rst  io_format.rst  loss_functions.rst  models.rst  preprocess.rst  quickstart.rst  storage_backends.rst  system_overview.rst  training.rst  user_guide_intro.rst
examples/: index.html  introduction.html
experiment_manager/: executor.py  parsing.py  reporting.py  run_experiment.py  tracing.py
export_and_inference/: index.html  introduction.html  marius_postprocess.html  marius_predict.html
graph_learning/: decoders.html  downstream_tasks.html  encoders.html  index.html  intro.html  learning_tasks.html
include/: buffer.h  config.h  logger.h  ordering.h  trainer.h  util.h
marius/: __init__.py
osdi2021/: execute.py  parse_output.py  plotting.py  run_experiment.py  utils.py
preprocess_datasets/: built_in.html  command_line.html  custom_datasets.html  data_format.html  index.html  python.html
python_api/: evaluation.html  index.html  training.html
python_bindings/: batch_wrap.cpp  config_wrap.cpp  datatypes_wrap.cpp  encoder_wrap.cpp  evaluator_wrap.cpp  trainer_wrap.cpp  wrap.cpp
scripts/: compile.sh  compile_cpu.sh  preprocess.sh
simulator/: README.md  arvix_sampling_in_mem_benchmark.csv  main.py  ogbn_products_in_mem_benchmark.csv  requirements.txt  runner.py  temp.py  tree.csv
src/: buffer.cpp  config.cpp  encoder.cpp  marius.cpp  model.cpp  ordering.cpp  storage.cpp  trainer.cpp
test/: CMakeLists.txt  README.md
test/cpp/: CMakeLists.txt
test/cpp/end_to_end/: CMakeLists.txt  main.cpp  test_main.cpp  test_model_options.cpp  test_partitioning.cpp  test_storage_options.cpp
test/cpp/integration/: CMakeLists.txt  main.cpp
test/cpp/performance/: CMakeLists.txt  test_neighborhood_sample.cpp
test/cpp/unit/: CMakeLists.txt  test_buffer.cpp  test_config.cpp  test_storage.cpp  testing_util.cpp  testing_util.h
test/cpp/unit/data/samplers/: test_negative.cpp
test/cpp/unit/nn/: test_activation.cpp  test_initialization.cpp  test_loss.cpp  test_model.cpp
test/db2graph/: test_postgres.py
test/end_to_end/: sanity.cpp
test/mpic/: test_codegen.py  test_error_handling.py
test/mpic/errors/: call_invalid_args.py  disable_assert.py  disable_format.py  disable_generators.py  disable_globals.py  disable_imports.py  disable_lambdas.py  disable_multiassign.py  disable_nesting.py  disable_non_layer_classes.py  disable_print.py  duplicate_class.py  duplicate_fn.py  invalid_return.py  require_argtypes.py
test/mpic/examples/: basic_layer.py
test/performance/: CMakeLists.txt
test/python/: constants.py  helpers.py
test/python/bindings/: test_fb15k.py
test/python/bindings/end_to_end/: test_fb15k_acc.py  test_interval_checkpointing.py  test_lp_basic.py  test_lp_buffer.py  test_lp_storage.py  test_model_dir.py  test_nc_basic.py  test_nc_buffer.py  test_nc_storage.py  test_resume_checkpoint.py  test_resume_training.py
test/python/bindings/integration/: test_config.py  test_data.py  test_nn.py
test/python/postprocess/: test_postprocess.py
test/python/postprocessing/: test_in_memory_exporter.py
test/python/predict/: test_predict.py
test/python/preprocessing/: test_cmd_opt_parsing.py  test_config_generator_cmd_opt_parsing.py  test_csv_preprocessor.py  test_preprocess_cmd_opt_parsing.py  test_spark_converter.py  test_torch_converter.py
test/test_configs/: default.ini  flat_file.ini  generate_test_configs.py  host_memory.ini  test_partitioning.ini
test/test_configs/lp/evaluation/: async.yaml  async_deg.yaml  async_filtered.yaml  sync.yaml  sync_deg.yaml  sync_filtered.yaml
test/test_configs/lp/model/: distmult.yaml  distmult_feat.yaml  gat_1_layer.yaml  gat_3_layer.yaml  gs_1_layer.yaml  gs_1_layer_feat.yaml  gs_1_layer_uniform.yaml  gs_3_layer.yaml  gs_3_layer_feat.yaml  gs_3_layer_uniform.yaml
test/test_configs/lp/storage/: edges_disk.yaml  in_memory.yaml  part_buffer.yaml
test/test_configs/lp/training/: async.yaml  async_deg.yaml  async_filtered.yaml  sync.yaml  sync_deg.yaml  sync_filtered.yaml
test/test_configs/nc/evaluation/: async.yaml  sync.yaml
test/test_configs/nc/model/: gat_1_layer.yaml  gat_3_layer.yaml  gs_1_layer.yaml  gs_1_layer_emb.yaml  gs_1_layer_uniform.yaml  gs_3_layer.yaml  gs_3_layer_emb.yaml  gs_3_layer_uniform.yaml
test/test_configs/nc/storage/: in_memory.yaml  part_buffer.yaml
test/test_configs/nc/training/: async.yaml  sync.yaml
test/test_data/: example_edges_with_weights.csv  generate.py  reformat_test_data.py  test_edges.pt  test_edges.txt  train_edges.pt  train_edges.txt  train_edges_partitions.txt  train_edges_weights.txt  valid_edges.pt  valid_edges.txt
test/test_data/partitioned_dataset/: test_edges.pt  train_edges.pt  train_edges_partitions.txt  valid_edges.pt
test/test_data/unpartitioned_dataset/: test_edges.pt  train_edges.pt  valid_edges.pt
test/unit/: CMakeLists.txt
tools/: config_generator.py  cpu_default_config.txt  csv_converter.py  gpu_default_config.txt  mult_gpu_default_config.txt  postprocess.py  preprocess.py
(+1238 files in other folders)
