[metadata]
name = marius
version = 0.0.1
description = A system for training embeddings for large scale graphs on a single machine
long_description = file: README.md
long_description_content_type = text/markdown

# Links
url = https://github.com/marius-team/marius

# Author information
author = Jason Mohoney
author_email = mohoney2@wisc.edu
maintainer = Jason Mohoney
maintainer_email = mohoney2@wisc.edu

# License information
license = Apache-2.0
license_file = LICENSE

[options]
install_requires =
    sphinx_rtd_theme
    breathe
    numpy
    pandas
    tox
    pytest
    torch

zip_safe = false
python_requires = >=3.6
include_package_data = true

packages =
    marius
    marius.tools
    marius.console_scripts

package_dir =
    marius = marius_package
    marius.tools = marius_package/tools
    marius.console_scripts = marius_package/console_scripts

[options.entry_points]
console_scripts =
    marius_train = marius.console_scripts.marius_train:main
    marius_eval = marius.console_scripts.marius_eval:main
    marius_preprocess = marius.tools.preprocess:main
    marius_postprocess = marius.tools.postprocess:main
    marius_config_generator = marius.tools.config_generator:main



