[metadata]
name = marius
version = 0.0.1
description = A system for training embeddings for large scale graphs on a single machine
long_description = file: README.md
long_description_content_type = text/markdown

# Links
url = https://github.com/marius-team/marius

# Author information
author = Jason Mohoney
author_email = mohoney2@wisc.edu
maintainer = Jason Mohoney
maintainer_email = mohoney2@wisc.edu

# License information
license = Apache-2.0
license_file = LICENSE

[options]
install_requires =
    sphinx_rtd_theme
    breathe
    numpy
    pandas
    tox
    pytest
    torch
    hydra-core
    pyspark
    psutil
    GPUtil
    importlib_metadata

zip_safe = false
python_requires = >=3.6
include_package_data = true

packages =
    marius
    marius.tools
    marius.console_scripts

package_dir =
    marius = src/python
    marius.tools = src/python/tools
    marius.console_scripts = src/python/console_scripts

[options.entry_points]
console_scripts =
    marius_train = marius.console_scripts.marius_train:main
    marius_eval = marius.console_scripts.marius_eval:main
    marius_preprocess = marius.tools.marius_preprocess:main
    marius_postprocess = marius.tools.marius_postprocess:main
    marius_config_generator = marius.tools.marius_config_generator:main
    marius_predict = marius.tools.marius_predict:main
    marius_env_info = marius.distribution.marius_env_info:main
