[metadata]
name = marius
version = 0.0.2
description = A system for training embeddings for large scale graphs on a single machine
long_description = file: README.md
long_description_content_type = text/markdown

# Links
url = https://github.com/marius-team/marius

# Author information
author = Jason Mohoney
author_email = mohoney2@wisc.edu
maintainer = Jason Mohoney
maintainer_email = mohoney2@wisc.edu

# License information
license = Apache-2.0
license_files = LICENSE

[options.extras_require]
spark =
    pyspark>=3.0.0
tests =
    pytest==7.0.1
    tox==3.25.1
docs =
    sphinx-rtd-theme==1.0.0
    sphinx-autodoc-typehints==1.17.0
    breathe==4.30.0
db2graph = 
    psycopg2-binary
    mysql-connector-python

[options]
install_requires =
    numpy>=1.2
    pandas>=1.1
    torch>=1.7.1
    omegaconf>=2.2
    psutil>=5.9
    GPUtil>=1.4
    importlib_metadata>=4.0.0

zip_safe = false
python_requires = >=3.7
include_package_data = true

packages =
    marius
    marius.tools
    marius.console_scripts

package_dir =
    marius = src/python
    marius.tools = src/python/tools
    marius.console_scripts = src/python/console_scripts

[options.entry_points]
console_scripts =
    marius_train = marius.console_scripts.marius_train:main
    marius_eval = marius.console_scripts.marius_eval:main
    marius_preprocess = marius.tools.marius_preprocess:main
    marius_postprocess = marius.tools.marius_postprocess:main
    marius_config_generator = marius.tools.marius_config_generator:main
    marius_predict = marius.tools.marius_predict:main
    marius_env_info = marius.distribution.marius_env_info:main
    marius_db2graph = marius.tools.db2graph.marius_db2graph:main